--- a/index.css
+++ b/index.css
@@ -217,3 +217,36 @@ nav .inner ul li a:hover {
   max-width: 70%;
   border-radius: 1rem;
 }
+
+.input-field {
+  width: 100%;
+}
+
+.form {
+  width: 100%;
+}
+
+.textbox {
+  width: 100%;
+  height: 60px;
+  border: none; /* 枠線を無効にする */
+}
+
+.input-field .form p {
+  position: relative;
+}
+
+.input-field .form .textbox {
+  position: absolute;
+  top: 0;
+  background-color: #c0c0c0;
+  border-radius: 1rem;
+}
+
+.input-field .form .botton {
+  position: absolute;
+  top: 0;
+  left: 90%; /* または、適切な位置に設定 */
+  border: none; /* 枠線を無効にする */
+  background-color: #c0c0c0;
+}
